# sx

./: .gitignore  CLAUDE.md  README.md  SEARCH.md  bm25tool.py  pyproject.toml  search  test_bm25tool.py
skills/sx/: SKILL.md
src/: bm25tool.py
src/sx_search/: __init__.py  __main__.py  cli.py  engine.py
tests/: test_bm25tool.py
